<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nataliia.finalproject_deshkonataliia.MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mainImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/main_img" />

            <ImageView
                android:id="@+id/mainViewImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_view_padding"
                android:layout_below="@+id/mainImageView"
                android:layout_gravity="top"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/main_img_view" />

            <TextView
                android:id="@+id/quotation_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainImageView"
                android:layout_marginRight="@dimen/quotation_margin_right"
                android:gravity="right"
                android:text="@string/quotation"
                android:textColor="@color/colorLightGrey"
                android:textColorHighlight="@color/colorOrange"
                android:textIsSelectable="true"
                android:textSize="@dimen/quotation_text_size"
                android:textStyle="italic" />


            <ImageView
                android:id="@+id/dateTimeImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/mainViewImageView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/date_time_margin_bottom"
                android:layout_marginLeft="@dimen/date_time_margin_left"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/time" />

            <TextView
                android:id="@+id/dateTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainViewImageView"
                android:layout_marginLeft="@dimen/date_time_margin_left"
                android:layout_marginTop="@dimen/date_time_margin_top"
                android:layout_toRightOf="@id/dateTimeImageView"
                android:text="@string/data_time_text_view"
                android:textColor="@color/colorDarkGrey"
                android:textSize="@dimen/data_time_text_size" />

            <ImageButton
                android:id="@+id/live_camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/dateTimeImageView"
                android:layout_marginLeft="@dimen/image_button_margin_left"
                android:layout_marginTop="@dimen/camera_button_margin_top"
                android:background="@null"
                android:onClick="open_livecamera_website_click"
                android:src="@drawable/button_camera" />

            <ImageButton
                android:id="@+id/weather_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dateTimeImageView"
                android:layout_centerInParent="true"
                android:background="@null"
                android:onClick="open_weather_website_click"
                android:src="@drawable/button_weather" />


            <ImageButton
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/dateTimeImageView"
                android:layout_marginRight="@dimen/image_button_margin_right"
                android:adjustViewBounds="true"
                android:background="@null"
                android:onClick="open_map_click"
                android:scaleType="fitXY"
                android:src="@drawable/button_map" />

            <TextView
                android:id="@+id/ways_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/map_button"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/ways_margin_bottom"
                android:gravity="center_horizontal"
                android:padding="@dimen/quotation_padding"
                android:text="@string/ways"
                android:textAlignment="center"
                android:textColor="@color/colorTitleMain"
                android:textColorHighlight="@color/colorOrange"
                android:textIsSelectable="true"
                android:textSize="@dimen/ways_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                style="@style/RecyclerViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ways_title_text_view"
                android:layout_margin="@dimen/recycler_view_margin"/>

        </RelativeLayout>
    </ScrollView>


</LinearLayout>
